WIP: `formset` still sitting in with bottom . `Username and password` is too high Not gonna fix them now. I am moving to next mission.

--- a/f1/src/index.css
+++ b/f1/src/index.css
@@ -32,12 +32,13 @@ body {
   bottom: 0;
 }
 
-.login-legend{
+#login-legend{
+  text-align: left;
   margin: 20px;
   width: 155px;
 }
 
-.login-fieldset{
+#login-fieldset{
   border: 3px solid;
 }
 
@@ -49,6 +50,17 @@ body {
   margin-left: 10px;
 }
 
-.login-form{
+.login-img{
+  margin: 0 auto;
   display: inline-block;
+}
+
+#login-form{
+  display: inline-block;
+  margin: 0 auto;
+  padding-left: 10%;
+}
+
+#login-area{
+  text-align: center;
 }
